2006-01-28 [paul]	1.9.100cvs193

	* AUTHORS
	* po/el.po
	* po/zh_CN.po
	* src/gtk/authors.h
	* tools/claws.i18n.status.pl
		updated translations submitted by Stavros Giannouris
		and Ralgh Young

2006-01-27 [cleroy]	1.9.100cvs192

	* src/summaryview.c
	* src/gtk/gtksourceprintjob.c
		Add image printing 
		(libgnomeprint only, of course)

2006-01-27 [paul]	1.9.100cvs191

	* po/fr.po
	* po/it.po
		updated by Fabien Vantard and Andrea Spadaccini

2006-01-26 [colin]	1.9.100cvs190

	* manual/Makefile.am
	* configure.ac
		Make building the manual optional 
		(--disable-manual)

2006-01-26 [paul]	1.9.100cvs189

	* manual/glossary.xml
	* manual/plugins.xml
		edited
	* po/en_GB.po
		updated

2006-01-26 [paul]	1.9.100cvs188

	* src/prefs_display_header.c
	* src/prefs_folder_column.c
	* src/prefs_msg_colors.c
	* src/prefs_summaries.c
	* src/prefs_summary_column.c
		HIGify

2006-01-25 [colin]	1.9.100cvs187

	* src/imap.c
		Don't allow moving/copying mails between
		queue/drafts and non-queue/drafts folders
		Fixes bug #897 (message header is resetted 
		if one is copied to Drafts)

2006-01-25 [colin]	1.9.100cvs186

	* src/folder.c
	* src/mainwindow.c
		Fix subscribed folders not found
	* src/compose.c
		Don't try to encode as original mail's charset
		if it's ascii 

2006-01-25 [paul]	1.9.100cvs185

	* AUTHORS
	* po/Makevars
		updated
	* po/de.po
	* po/pl.po
	* po/pt_BR.po
	* po/sr.po
		updates submitted by Stephan Sachse, Emilian Nowak
		and Quar, Frederico Goncalves Guimaraes, and
		Aleksandar Urosevic
		Fix Bug 896, 'PT_BR locale broken'.
	* src/gtk/authors.h
		updated

2006-01-24 [mones]	1.9.100cvs184

	* manual/glossary.xml
		All current terms finished. Reviewers welcome ;-)
	* manual/keyboard.xml
		Fixed column width for pdf output.
	* po/es.po
		Updated

2006-01-24 [paul]	1.9.100cvs183

	* manual/glossary.xml
		fix id name
	* manual/dist/html/Makefile.am
	* manual/dist/pdf/Makefile.am
	* manual/dist/ps/Makefile.am
	* manual/dist/txt/Makefile.am
		fix make deps