@@ -1,3 +1,9 @@
+2006-01-28 [colin]	1.9.100cvs194
+
+	* src/gtk/gtksourceprintjob.c
+		Don't fiddle with PangoLayout when we
+		have an image
+
 2006-01-28 [paul]	1.9.100cvs193
 
 	* AUTHORS
